Fix alignment

--- a/scss/components/_minicalendar.scss
+++ b/scss/components/_minicalendar.scss
@@ -75,8 +75,10 @@ $minicalendar-cell-size: 2em !default;
 	left: 0;
 	right: 0;
 	bottom: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	font-weight: bold;
-	line-height: 2.3; // check modifier below when no week displayed
 	color: var(--primary-contrast);
 	background: var(--primary);
 	border-radius: $global-border-radius;
